--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- <link rel="shortcut icon" href="C:\projects\hays\test\webapp\src\assets\icons\favicon.ico"> -->
-    <title>AL MUNDO</title>
+    <title>WEATHER</title>
     <!-- <title>Webpack App</title> -->
 <link rel="shortcut icon" href="/favicon.ico"><link href="/style.2e530e774e8f3ae981e5.css" rel="stylesheet"></head>
 
